# piml-models

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
src/configs/: train.yaml
src/configs/dataset/: heat1d.yaml
src/configs/lr_scheduler/: constant.yaml
src/configs/model/: pinn.yaml
src/configs/optimizer/: adam.yaml
src/configs/writer/: cometml.yaml  tensorboard.yaml  wandb.yaml
src/dataset/: pinn_base.py
src/dataset/heat1d/: __init__.py  data.py  pinn.py
src/logger/: base.py  cometml.py  tensorboard.py  utils.py  wandb.py
src/loss/heat1d/: pinn.py
src/model/pinn/: __init__.py  model.py
src/utils/: io.py  jax.py
