[project]
name = "piml-papers"
version = "0.1.0"
description = "Implementations of Physics Informed Machine Learning models"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.14.9",
    "ty==0.0.3",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 100
